new user sign up

--- a/.classpath
+++ b/.classpath
@@ -3,43 +3,43 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="melibrary.com.genuitec.eclipse.j2eedt.core.MYECLIPSE_JAVAEE_5_CONTAINER"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/activation.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/classes12.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-beanutils.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-beanutils-1.6.1.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-beanutils-1.7.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-cli-gump-21032006.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-collections.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-collections-3.0.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-dbcp-1.1.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-digester.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-digester-1.5.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-discovery.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-el.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-fileupload-1.0.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-httpclient.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-io11800.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-lang-2.0.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-lang-2.5.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-logging.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-logging-1.0.3.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-modeler.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-net-1.0.0-dev.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-pool-1.1.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/commons-validator-1.1.1.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/j2ee.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/javamail.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/jcommon-1.0.17.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/jfreechart-1.0.14.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/JSSE.JAR"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/junit.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/LOG4J.JAR"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/log4j-1.2.8.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/log4j-1.2.15.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/MAIL.JAR"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/ojdbc6.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/ojdbc14.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/poi-3.2-FINAL.jar"/>
-	<classpathentry kind="lib" path="G:/Ace/Code/project/lib/SAAJ.JAR"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/activation.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/classes12.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-beanutils.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-beanutils-1.6.1.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-beanutils-1.7.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-cli-gump-21032006.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-collections.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-collections-3.0.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-dbcp-1.1.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-digester.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-digester-1.5.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-discovery.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-el.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-fileupload-1.0.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-httpclient.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-io11800.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-lang-2.0.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-lang-2.5.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-logging.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-logging-1.0.3.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-modeler.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-net-1.0.0-dev.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-pool-1.1.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/commons-validator-1.1.1.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/j2ee.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/javamail.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/jcommon-1.0.17.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/jfreechart-1.0.14.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/JSSE.JAR"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/junit.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/LOG4J.JAR"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/log4j-1.2.8.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/MAIL.JAR"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/ojdbc14.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/poi-3.2-FINAL.jar"/>
+	<classpathentry kind="lib" path="F:/IUSG/lib/SAAJ.JAR"/>
 	<classpathentry kind="output" path="WebRoot/WEB-INF/classes"/>
 </classpath>
